# verbose-parakeet

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  pyvenv.cfg  run_checks.py
src/: __init__.py  masks.py  processing.py  widget.py
tests/: __init__.py  test_masks.py  test_processing.py  test_widget.py
