[tool.poetry]
name = "bank_feature"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"

[tool.black]
line-length = 119
exclude = '''\.git|venv|Lib|Scripts'''

[tool.isort]
line_length = 119
multi_line_output = 5
skip = ["Lib", "Scripts"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv|Lib|Scripts'